--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "memes feed",
   "main": "webpack.config.js",
   "scripts": {
-    "build": "yarn webpack",
-    "start": "yarn webpack --watch"
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@types/react": "^16.8.2",
@@ -15,6 +15,7 @@
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3",
     "webpack": "4",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
   }
 }
