--- a/package.json
+++ b/package.json
@@ -8,11 +8,24 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@types/node": "^10.12.24",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
+    "@types/react-list": "^0.8.4",
+    "@types/react-redux": "^7.0.1",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.6",
     "css-loader": "^2.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-list": "^0.8.11",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3",
