--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "allowJs": true,
     "sourceMap": true,
     "target": "esnext",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node"
   },
-  "include": ["./src/**/*", "./defs.d.ts"]
+  "include": ["./node_modules/redux/**/*", "./src/**/*", "./defs.d.ts"]
 }
