--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.7",
     "@types/node": "^10.12.24",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
@@ -17,6 +18,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.6",
+    "classnames": "^2.2.6",
     "css-loader": "^2.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
@@ -27,6 +29,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
+    "svg-react-loader": "^0.4.6",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3",
     "webpack": "4",
